<resources>
    <string name="app_name">AppMobile_DiabeControl</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciarSesion">INICIAR SESIÓN</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="registro">REGISTRO</string>
    <string name="config">CONFIGURACIÓN DEL TRATAMIENTO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Abrir menú lateral</string>
    <string name="navigation_drawer_close">Cerrar menú lateral</string>
</resources>